@@ -384,6 +384,7 @@ PORT stm8_port =
   stm8_setDefaultOptions,
   stm8_assignRegisters,
   stm8_getRegName,
+  0,
   NULL,
   stm8_keywords,
   NULL,
